# stupidDB

./: .gitignore  Justfile  README.MD  README.md  pyproject.toml
stupiddb/: __init__.py  stupiddb.py  stupidlock.py
stupiddb2/: __init__.py
stupidlock/: __init__.py  stupidlock.py
tests/: __init__.py  test_readme.py  test_stupiddb.py  test_stupidlock.py
