[tool.poetry]
name = "stupiddb"
version = "1.0.0"
description = "an incredibly stupid, for fun, json \"db\""
authors = ["Jaffar Almaleki <jaffar.almaleki@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
ruff = "*"
flake8-bugbear = "*"
mypy = "^1.8.0"
pytest = "^7.4.4"

[tool.isort]
profile = "black"

[tool.ruff]
select = ["E", "F", "B"]
ignore = ["B904"]
unfixable = ["B"]
line-length = 128 # black enforces line length, this is to make ruff happy
target-version = "py310"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403"]
