[tool.poetry]
name = "stupiddb2"
version = "1.0.0"
description = "an incredibly stupid, for fun, json \"db\""
authors = ["Jaffar Almaleki <jaffar.almaleki@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
coverage = "^7.4.0"
flake8-bugbear = "^24.1.17"
isort = "^5.13.2"
mypy = "^1.8.0"
pytest = "^7.4.4"
ruff = "^0.1.14"

[tool.isort]
profile = "black"

[tool.ruff]
select = ["E", "F", "B"]
ignore = ["B904"]
unfixable = ["B"]
line-length = 128 # black enforces line length, this is to make ruff happy
target-version = "py311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403"]
